--- a/package.json
+++ b/package.json
@@ -42,33 +42,33 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "meow": "^12.1.1",
-    "ts-morph": "^20.0.0"
+    "meow": "^13.0.0",
+    "ts-morph": "^21.0.1"
   },
   "devDependencies": {
-    "@types/meow": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.0",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.4.6",
+    "prettier-plugin-packagejson": "^2.4.7",
     "replace-in-file": "^7.0.2",
     "rimraf": "^5.0.5",
     "tsc-alias": "^1.8.8",
-    "tsx": "^4.1.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.3",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-plugin-dts": "^3.6.4",
     "vite-plugin-linter": "^2.0.7",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.6"
+    "vite-tsconfig-paths": "^4.2.2",
+    "vitest": "^1.1.0"
   }
 }
