--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typroof",
-  "version": "0.0.1-alpha.1",
+  "version": "0.1.0",
   "private": true,
   "description": "Test your TypeScript type definitions",
   "keywords": [
