--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
     /* Type */
     "declaration": true,
     "declarationMap": true,
-    "typeRoots": ["node_modules/@types", "src/index.d.ts"]
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src", "test", "src/internal/utils", "proof/string-utils.proof.ts"],
+  "include": ["src", "test"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
