--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "allowImportingTsExtensions": false,
     "noEmit": false,
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "include": ["src"],
+  "exclude": ["src/**/*.spec.ts"],
   "tsc-alias": {
     "resolveFullPaths": true
   }
