--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
+    "@types/eslint": "^8.56.0",
+    "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.10.5",
+    "@types/prettier": "^2.7.3",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@vitest/coverage-v8": "^1.1.0",
@@ -69,10 +72,6 @@
     "tsc-alias": "^1.8.8",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vite-plugin-dts": "^3.7.0",
-    "vite-plugin-linter": "^2.0.7",
-    "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^1.1.0"
   }
 }
