--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "include": [".eslintrc.cjs", "prettier.config.cjs", "commitlint.config.js", ".lintstagedrc.js"]
+  "include": [
+    "vitest.config.ts",
+    ".eslintrc.cjs",
+    "prettier.config.cjs",
+    "commitlint.config.js",
+    ".lintstagedrc.js"
+  ]
 }
