--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [],
+    "lib": ["ES2020"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -24,9 +24,7 @@
 
     /* Type */
     "declaration": true,
-    "declarationMap": true,
-    "typeRoots": ["node_modules/@types"]
+    "declarationMap": true
   },
-  "include": ["src", "test"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "test"]
 }
