--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,15 @@
 
     /* Type */
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "typroof": ["src"],
+      "@/*": ["src/*"],
+      "@test/*": ["test/*"]
+    }
   },
   "include": ["src", "test"]
 }
