--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     /* Linting */
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    // "noUnusedLocals": true,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
