--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
