--- a/examples/simple-plugin/package.json
+++ b/examples/simple-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typroof-plugin-simple-example",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "description": "A simple example of a typroof plugin",
   "license": "MIT",
@@ -11,34 +11,33 @@
   "types": "./index.d.ts",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "tsc -p ./tsconfig.build.json && cpy ./dist/**/* ./build/ && rimraf dist && prettier --loglevel=silent --print-width 80 --write ./build/ && cpy ./package.json ./build/ && replace-in-file \"  \\\"private\\\": true,\" \"\" ./build/package.json && prettier --loglevel=silent --print-width 80 --write ./build/package.json && cpy ./README.md ./build/ && cpy ./LICENSE ./build/",
+    "build": "tsc -p ./tsconfig.build.json && cpy ./dist/**/* ./build/ && rimraf dist && prettier --log-level=silent --print-width 80 --write ./build/ --ignore-path !build/ && cpy ./package.json ./build/ && replace-in-file \"  \\\"private\\\": true,\" \"\" ./build/package.json && prettier --log-level=silent --print-width 80 --write ./build/package.json --ignore-path !build/ && cpy ./README.md ./build/ && cpy ./LICENSE ./build/",
     "clean": "rimraf dist build",
-    "format": "prettier --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
-    "lint": "eslint {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
-    "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
+    "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
+    "lint": "eslint --no-error-on-unmatched-pattern {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
+    "lint:fix": "eslint --no-error-on-unmatched-pattern --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
     "test-types": "typroof"
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "typroof": "^0.2.5"
+    "typroof": "^0.2.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.4",
-    "@types/prettier": "^2.7.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.4.9",
-    "replace-in-file": "^7.1.0",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.3"
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-packagejson": "^2.5.0",
+    "replace-in-file": "^7.2.0",
+    "rimraf": "^5.0.7",
+    "typescript": "^5.5.2"
   }
 }
