--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,7 @@
     /* Path aliases */
     "baseUrl": ".",
     "paths": {
-      "typroof": ["src"],
-      "@/*": ["src/*"],
-      "@test/*": ["test/*"]
+      "typroof": ["src"]
     }
   },
   "include": ["typroof.config.ts", "src", "test"]
