--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typroof",
-  "version": "0.2.9",
+  "version": "0.2.10-dev",
   "private": true,
   "description": "🚀 Revolutionize your TS type testing with a fast, smooth, and flexible WYSIWYG experience!",
   "keywords": [
@@ -44,37 +44,37 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "esbuild": "^0.23.0",
-    "get-tsconfig": "^4.7.5",
+    "esbuild": "^0.24.0",
+    "get-tsconfig": "^4.8.1",
     "meow": "^13.2.0",
-    "ts-morph": "^23.0.0"
+    "ts-morph": "^24.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@types/eslint": "^8.56.10",
+    "@commitlint/cli": "^19.5.0",
+    "@types/eslint": "^8.56.12",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
+    "@types/node": "^22.7.8",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "prettier-plugin-packagejson": "^2.5.0",
-    "replace-in-file": "^8.0.2",
-    "rimraf": "^5.0.7",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.3",
+    "replace-in-file": "^8.2.0",
+    "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
-    "tsx": "^4.15.7",
-    "typescript": "^5.5.3",
-    "vitest": "^1.6.0"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   }
 }
