--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 
     /* Linting */
     "strict": true,
+    "checkJs": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
