--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prebuild": "npm run clean",
     "build": "tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json && rimraf -g ./dist/tools/**/*.{js,d.ts.map} && replace-in-file \"/^\\/\\/# sourceMappingURL=.+$/mg\" \"\" ./dist/tools/**/*.d.ts --isRegex && cpy . ../../build/ --cwd=dist && rimraf dist && replace-in-file \"/^\\s*\\/\\/ eslint-disable-next-line .+$/mg\" \"\" ./build/**/*.js --isRegex && prettier --log-level=silent --print-width 80 --write ./build/**/*.{js,d.ts} --ignore-path !build/**/* && cpy ./package.json ./build/ && replace-in-file \"  \\\"private\\\": true,\" \"\" ./build/package.json && replace-in-file \"  \\\"prepare\\\": \\\"husky\\\",\" \"\" ./build/package.json && prettier --log-level=silent --print-width 80 --write ./build/package.json --ignore-path !build/**/* && cpy ./README.md ./build/ && cpy ./LICENSE ./build/ && cpy ./screenshot.png ./build/ && cpy ./screenshot.gif ./build/",
     "clean": "rimraf dist build",
-    "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md} && prettier --write --parser json .hintrc",
+    "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
     "lint": "eslint {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "prepare": "husky",
