--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json && rimraf -g ./dist/tools/**/*.{js,d.ts.map} && replace-in-file \"/^\\/\\/# sourceMappingURL=.+$/mg\" \"\" ./dist/tools/**/*.d.ts --isRegex && cpy . ../../build/ --cwd=dist && rimraf dist && replace-in-file \"/^\\s*\\/\\/ eslint-disable-next-line .+$/mg\" \"\" ./build/**/*.js --isRegex && prettier --log-level=silent --print-width 80 --write ./build/**/*.{js,d.ts} --ignore-path !build/**/* && cpy ./package.json ./build/ && replace-in-file \"  \\\"private\\\": true,\" \"\" ./build/package.json && replace-in-file \"  \\\"prepare\\\": \\\"husky\\\",\" \"\" ./build/package.json && prettier --log-level=silent --print-width 80 --write ./build/package.json --ignore-path !build/**/* && cpy ./README.md ./build/ && cpy ./LICENSE ./build/ && cpy ./screenshot.png ./build/ && cpy ./screenshot.gif ./build/",
-    "clean": "rimraf dist build",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && rimraf -g \"dist/tools/**/*.{js,d.ts.map}\" && replace-in-file \"/^\\/\\/# sourceMappingURL=.+$/mg\" \"\" \"dist/tools/**/*.d.ts\" --isRegex && replace-in-file \"/^\\s*\\/\\/ eslint-disable-next-line .+$/mg\" \"\" \"dist/**/*.js\" --isRegex && prettier --log-level=silent --print-width 80 --write \"dist/**/*.{js,d.ts}\" --ignore-path !dist && cpy package.json dist && json -I -f dist/package.json -e \"delete this.private; delete this.scripts; delete this.devDependencies\" && cpy LICENSE dist && cpy README.md dist && node -e \"import { replaceInFileSync } from 'replace-in-file'; import packageJSON from './dist/package.json' with { type: 'json' }; ['screenshot.gif', 'screenshot.png'].forEach((path) => replaceInFileSync({ files: 'dist/README.md', from: path, to: 'https://github.com/Snowflyt/typroof/blob/v' + packageJSON['version'] + '/' + path }))\"",
+    "clean": "rimraf dist",
     "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
     "lint": "eslint {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
@@ -67,6 +67,7 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "husky": "^9.1.7",
+    "json": "^11.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.6",
