--- a/examples/simple-plugin/package.json
+++ b/examples/simple-plugin/package.json
@@ -1,8 +1,8 @@
 {
   "name": "typroof-plugin-simple-example",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "private": true,
-  "description": "A simple example of a typroof plugin",
+  "description": "A simple example of a Typroof plugin",
   "license": "MIT",
   "author": "Snowflyt <gaoge011022@163.com>",
   "type": "module",
@@ -11,33 +11,35 @@
   "types": "./index.d.ts",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "tsc -p ./tsconfig.build.json && cpy ./dist/**/* ./build/ && rimraf dist && prettier --log-level=silent --print-width 80 --write ./build/ --ignore-path !build/ && cpy ./package.json ./build/ && replace-in-file \"  \\\"private\\\": true,\" \"\" ./build/package.json && prettier --log-level=silent --print-width 80 --write ./build/package.json --ignore-path !build/ && cpy ./README.md ./build/ && cpy ./LICENSE ./build/",
-    "clean": "rimraf dist build",
+    "build": "tsc -p ./tsconfig.build.json && prettier --log-level=silent --print-width 80 --write \"dist/**/*.{js,d.ts}\" --ignore-path !dist && cpy package.json dist && json -I -f dist/package.json -e \"delete this.private; delete this.scripts; delete this.devDependencies\" && cpy README.md dist && cpy LICENSE dist",
+    "clean": "rimraf dist",
     "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
-    "lint": "eslint --no-error-on-unmatched-pattern {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
-    "lint:fix": "eslint --no-error-on-unmatched-pattern --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts}",
+    "lint": "eslint {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
+    "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "test-types": "typroof"
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "typroof": "^0.2.8"
+    "typroof": "^0.3.0"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.8",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^22.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-packagejson": "^2.5.0",
-    "replace-in-file": "^7.2.0",
-    "rimraf": "^5.0.7",
-    "typescript": "^5.5.2"
+    "json": "^11.0.0",
+    "prettier": "^3.4.0",
+    "prettier-plugin-packagejson": "^2.5.6",
+    "replace-in-file": "^8.2.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.2"
   }
 }
