--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typroof",
-  "version": "0.3.0",
+  "version": "0.3.2~dev",
   "private": true,
   "description": "🚀 Revolutionize your TS type testing with a fast, smooth, and flexible WYSIWYG experience!",
   "keywords": [
