--- a/package.json
+++ b/package.json
@@ -47,36 +47,35 @@
     "esbuild": "^0.24.0",
     "get-tsconfig": "^4.8.1",
     "meow": "^13.2.0",
-    "ts-morph": "^24.0.0",
-    "typroof": "file:"
+    "ts-morph": "^24.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
+    "@commitlint/cli": "^19.6.1",
     "@types/eslint": "^8.56.12",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "^22.9.4",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "@vitest/coverage-v8": "^2.1.5",
-    "@vitest/ui": "^2.1.5",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "cpy-cli": "^5.0.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "husky": "^9.1.7",
     "json": "^11.0.0",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
     "prettier-plugin-packagejson": "^2.5.6",
     "replace-in-file": "^8.2.0",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.8"
   }
 }
