🐳 chore: Remove Husky and lint-staged in favor of simpler workflow

--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && rimraf -g \"dist/tools/**/*.{js,d.ts.map}\" && replace-in-file \"/^\\/\\/# sourceMappingURL=.+$/mg\" \"\" \"dist/tools/**/*.d.ts\" --isRegex && replace-in-file \"/^\\s*\\/\\/ eslint-disable-next-line .+$/mg\" \"\" \"dist/**/*.js\" --isRegex && prettier --log-level=silent --print-width 80 --write \"dist/**/*.{js,d.ts}\" --ignore-path !dist && cpy package.json dist && json -I -f dist/package.json -e \"delete this.private; delete this.scripts; delete this.devDependencies\" && cpy LICENSE dist && cpy README.md dist && node -e \"import { replaceInFileSync } from 'replace-in-file'; import packageJSON from './dist/package.json' with { type: 'json' }; ['docs/screenshot.png'].forEach((path) => replaceInFileSync({ files: 'dist/README.md', from: path, to: 'https://github.com/Snowflyt/typroof/blob/v' + packageJSON['version'] + '/' + path }))\"",
+    "build": "npm run test-types && npm run test && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && rimraf -g \"dist/tools/**/*.{js,d.ts.map}\" && replace-in-file \"/^\\/\\/# sourceMappingURL=.+$/mg\" \"\" \"dist/tools/**/*.d.ts\" --isRegex && replace-in-file \"/^\\s*\\/\\/ eslint-disable-next-line .+$/mg\" \"\" \"dist/**/*.js\" --isRegex && prettier --log-level=silent --print-width 80 --write \"dist/**/*.{js,d.ts}\" --ignore-path !dist && cpy package.json dist && json -I -f dist/package.json -e \"delete this.private; delete this.scripts; delete this.devDependencies\" && cpy LICENSE dist && cpy README.md dist && node -e \"import { replaceInFileSync } from 'replace-in-file'; import packageJSON from './dist/package.json' with { type: 'json' }; ['docs/screenshot.png'].forEach((path) => replaceInFileSync({ files: 'dist/README.md', from: path, to: 'https://github.com/Snowflyt/typroof/blob/v' + packageJSON['version'] + '/' + path }))\"",
     "clean": "rimraf dist",
     "format": "prettier --no-error-on-unmatched-pattern --write {src,test}/**/*.{js,ts,json} *.{js,cjs,mjs,ts,cts,mts,json,md}",
     "lint": "eslint {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
-    "prepare": "husky",
+    "prepare": "node -e \"import fs from 'fs'; import path from 'path'; const hooksDir = path.join(process.cwd(), '.githooks'); const gitHooksDir = path.join(process.cwd(), '.git/hooks'); if (!fs.existsSync(gitHooksDir)) { console.error('Git hooks directory not found, please run this in a git repository.'); process.exit(1); } fs.readdirSync(hooksDir).forEach(file => { const srcFile = path.join(hooksDir, file); const destFile = path.join(gitHooksDir, file); fs.copyFileSync(srcFile, destFile); if (process.platform !== 'win32' && !file.endsWith('.cmd')) { fs.chmodSync(destFile, 0o755); } })\"",
     "test": "vitest run",
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui --coverage.enabled=true",
@@ -51,7 +51,6 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@types/eslint": "^8.56.12",
-    "@types/lint-staged": "^13.3.0",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
@@ -65,9 +64,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "husky": "^9.1.7",
     "json": "^11.0.0",
-    "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "prettier-plugin-packagejson": "^2.5.8",
     "replace-in-file": "^8.3.0",
