📃 docs(README): Update description and badges

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typroof",
   "version": "0.4.1",
   "private": true,
-  "description": "🚀 Revolutionize your TS type testing with a fast, smooth, and flexible WYSIWYG experience!",
+  "description": "TypeScript type testing with a fast CLI tool and a smooth WYSIWYG editor experience.",
   "keywords": [
     "typescript",
     "typroof",
@@ -36,11 +36,11 @@
     "lint:fix": "eslint --fix {src,test}/**/*.{js,ts} *.{js,cjs,mjs,ts,cts,mts} --no-error-on-unmatched-pattern --report-unused-disable-directives-severity error --max-warnings 0",
     "prepare": "node -e \"import fs from 'fs'; import path from 'path'; const hooksDir = path.join(process.cwd(), '.githooks'); const gitHooksDir = path.join(process.cwd(), '.git/hooks'); if (!fs.existsSync(gitHooksDir)) { console.error('Git hooks directory not found, please run this in a git repository.'); process.exit(1); } fs.readdirSync(hooksDir).forEach(file => { const srcFile = path.join(hooksDir, file); const destFile = path.join(gitHooksDir, file); fs.copyFileSync(srcFile, destFile); if (process.platform !== 'win32' && !file.endsWith('.cmd')) { fs.chmodSync(destFile, 0o755); } })\"",
     "test": "vitest run",
+    "test-types": "tsx src/cli.ts",
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui --coverage.enabled=true",
     "test:watch": "vitest",
     "test:watch-cov": "vitest --coverage",
-    "test-types": "tsx src/cli.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
