🐳 chore: Update copyright information

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/Snowflyt/typroof"
   },
   "license": "MIT",
-  "author": "Snowflyt <gaoge011022@163.com>",
+  "author": "Ge Gao (Snowflyt) <gaoge011022@gmail.com>",
   "type": "module",
   "main": "./index.js",
   "module": "./index.js",
