--- a/examples/simple-plugin/package.json
+++ b/examples/simple-plugin/package.json
@@ -1,10 +1,10 @@
 {
   "name": "typroof-plugin-simple-example",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "description": "A simple example of a Typroof plugin",
   "license": "MIT",
-  "author": "Snowflyt <gaoge011022@163.com>",
+  "author": "Ge Gao (Snowflyt) <gaoge011022@gmail.com>",
   "type": "module",
   "main": "./index.js",
   "module": "./index.js",
@@ -19,27 +19,27 @@
     "test-types": "typroof"
   },
   "dependencies": {
-    "chalk": "^5.4.1",
-    "typroof": "^0.4.0"
+    "typroof": "^0.5.0"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.12",
-    "@types/node": "^22.13.1",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
+    "@types/node": "^22.13.10",
+    "@typescript-eslint/parser": "^8.26.1",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^4.2.2",
+    "eslint-plugin-import-x": "^4.9.0",
+    "eslint-plugin-jsdoc": "^50.6.8",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-sonarjs": "^0.25.1",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
+    "globals": "^16.0.0",
     "json": "^11.0.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-packagejson": "^2.5.8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.10",
     "replace-in-file": "^8.3.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
