--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "esbuild": "^0.25.1",
     "get-tsconfig": "^4.10.0",
     "meow": "^13.2.0",
-    "tinyglobby": "^0.2.12"
+    "tinyglobby": "^0.2.12",
+    "typescript": "4.x || 5.x"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
