--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
