🐳 chore(build): Force `--resolve-full-paths` when invoking tsc-alias

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,8 +6,5 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.proof.ts"],
-  "tsc-alias": {
-    "resolveFullPaths": true
-  }
+  "exclude": ["src/**/*.spec.ts", "src/**/*.proof.ts"]
 }
